# aes-encrypt

./: .gitignore  Cargo.toml
node/: ecdh.js  encrypt.js  execute.js  index.js  keys.ks  package-lock.json  package.json  query.js
polygon/: package-lock.json  package.json
polygon/scripts/: encrypt.js
src/: contract.rs  lib.rs  main.rs  msg.rs  state.rs
