[package]
name = "secret_encryption"
version = "0.1.0"
authors = [""]
edition = "2021"
description = ""
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11", features = [
    "stargate",
    "ibc3",
] }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
secret-toolkit-storage = "0.10.0"
cosmwasm-schema = "1.0.0"
schemars = { version = "0.8.11" }
serde = { version = "1.0" }
thiserror = { version = "1.0" }

# crypto ya bish
# aes-siv = { version = "0.7.0", default-features = false }
aes-siv = "0.6.2"
derive_more = "0.99"
log = "0.4.8"
secret-toolkit = { version = "0.10.0", features = ["crypto"] }
secret-toolkit-crypto = { version = "0.10.0", features = [
    "hash",
    "rand",
    "ecc-secp256k1",
] }

# EVM
prost = { version = "0.12.1", default-features = false, features = [
    "prost-derive",
] }
ethabi = { version = "18.0.0", default-features = false, features = [] }
